# chess_cpp

./: CMakeLists.txt  main.cpp
includes/: board.h  pawn.h  piece.h  types.h
src/Boards/: board.cpp
src/Pieces/: pawn.cpp  piece.cpp
